testcases/semantic_error/null1.shp
class Main<p1> where
    p1: [Main<p1>]
{
    f: i32;

    fn identity(x: i32): i32
    {
        return null;
    }
}
